# FlappyBird

./: .gitignore  Cargo.toml  README.md  index.html
src/: lib.rs
